--- a/source2/index.html
+++ b/source2/index.html
@@ -10,6 +10,31 @@
 
 <body>
     <h1 id="top">Categorias</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="#metadata">Metadata Content</a>
+            </li>
+            <li>
+                <a href="#flow">Flow Content</a>
+            </li>
+            <li>
+                <a href="#sectioning">Sectioning Content</a>
+            </li>
+            <li>
+                <a href="#heading">Heading Content</a>
+            </li>
+            <li>
+                <a href="#phrasing">Phrasing Content</a>
+            </li>
+            <li>
+                <a href="#embedded">Embedded Content</a>
+            </li>
+            <li>
+                <a href="#interactive">Interactive Content</a>
+            </li>
+        </ul>
+    </nav>
     <section>
         <article>
             <header>
@@ -32,25 +57,145 @@
         </article>
     </section>
     <section>
-            <article>
-                <header>
-                    <h2 id="flow">Flow Content
-                        <a href="#top">top &uarr;</a>
-                    </h2>
-                </header>
-                <p>Conteúdo fluxo. Fluxo de conteúdo. 
-                   Regra: Se o elemento permite inserir qualquer elemento ele é dessa categoria.</p>
-                <ul>
-                    <li>base</li>
-                    <li>command</li>
-                    <li>link</li>
-                    <li>meta</li>
-                    <li>noscript</li>
-                    <li>script</li>
-                    <li>style</li>
-                    <li>title</li>
-                </ul>
-            </article>
-        </section>
+        <article>
+            <header>
+                <h2 id="flow">Flow Content
+                    <a href="#top">top &uarr;</a>
+                </h2>
+            </header>
+            <p>Conteúdo fluxo. Fluxo de conteúdo. Regra: Se o elemento permite inserir qualquer elemento ele é dessa categoria.</p>
+            <ul>
+                <li>a</li>
+                <li>abbr</li>
+                <li>address</li>
+                <li>area (se for descendente de um elemento mapa)</li>
+                <li>article</li>
+                <li>aside</li>
+                <li>entre outros</li>
+            </ul>
+        </article>
+    </section>
+    <section>
+        <article>
+            <header>
+                <h2 id="sectioning">Sectioning Content
+                    <a href="#top">top &uarr;</a>
+                </h2>
+            </header>
+            <p>Agrupam grupos de textos no documento</p>
+            <ul>
+                <li>article</li>
+                <li>aside</li>
+                <li>nav</li>
+                <li>section</li>
+            </ul>
+        </article>
+    </section>
+    <section>
+        <article>
+            <header>
+                <h2 id="heading">Heading Content
+                    <a href="#top">top &uarr;</a>
+                </h2>
+            </header>
+            <p>definem uma seção de cabeçalhos, podem estar contidos dentro de um elemento da categoria Sectioning
+            </p>
+            <ul>
+                <li>h1 - h6</li>
+                <li>hgroup</li>
+            </ul>
+        </article>
+    </section>
+    <section>
+        <article>
+            <header>
+                <h2 id="phrasing">Phrasing Content
+                    <a href="#top">top &uarr;</a>
+                </h2>
+            </header>
+            <p>Elementos que marcam texto</p>
+            <ul>
+                <li>a</li>
+                <li>abbr</li>
+                <li>area (se for descendente de um elemento mapa)</li>
+                <li>audio</li>
+                <li>b</li>
+                <li>bdo</li>
+                <li>br</li>
+                <li>button</li>
+                <li>canvas</li>
+                <li>del (se ele contiver um elemento da categoria Phransing)</li>
+                <li>ins (se ele contiver um elementa da categoria Phrasing)</li>
+                <li>kbd</li>
+                <li>keygen</li>
+                <li>label</li>
+                <li>entre outros.</li>
+            </ul>
+        </article>
+    </section>
+    <section>
+        <article>
+            <header>
+                <h2 id="embedded">Embedded Content
+                    <a href="#top">top &uarr;</a>
+                </h2>
+            </header>
+            <p>Importam outra fonte de informação</p>
+            <ul>
+                <li>audio</li>
+                <li>canvas</li>
+                <li>embed</li>
+                <li>iframe</li>
+                <li>img</li>
+                <li>math</li>
+                <li>object</li>
+                <li>svg</li>
+                <li>video</li>
+            </ul>
+        </article>
+    </section>
+    <section>
+        <article>
+            <header>
+                <h2 id="interactive">Interactive Content
+                    <a href="#top">top &uarr;</a>
+                </h2>
+            </header>
+            <p>Conteudo que permite a interacao do usuario Nota: Alguns elementos no HTML podem ser ativados por um comportamento.
+                Isso significa que o usuario pode ativa-lo de alguma forma. O inicio da sequenca de eventos depende do mecanismo
+                de ativação e normalmente culminam em um evento de click seguido pelo evento DOMActivate. O user-agent permite
+                que o usuario ative manualmente o elemento que tem este comportamento utilizando um teclado, mouse, comando
+                de voz, etc.
+            </p>
+            <ul>
+                <li>a</li>
+                <li>audio (se o atributo
+                    <code> control </code> for utilizado</li>
+                <li>button</li>
+                <li>details</li>
+                <li>embed</li>
+                <li>iframe</li>
+                <li>img (se o atributo
+                    <code>usemap</code> for utilizado</li>
+                <li>input (se o atributo
+                    <code>type</code> não tiver o valor
+                    <code>hidden</code>
+                </li>
+                <li>keygen</li>
+                <li>label</li>
+                <li>menu (se o atributo
+                    <code>type</code> tiver o valor
+                    <code>toolbar</code>
+                </li>
+                <li>object (se o atributo
+                    <code>usemap</code> for utilizado</li>
+                <li>select</li>
+                <li>textarea</li>
+                <li>video (se o atributo
+                    <code>control</code> for utilizado</li>
+            </ul>
+        </article>
+    </section>
 </body>
+
 </html>
